--- a/{{cookiecutter.project_name}}/templates/eisvogel-2.0.0.latex
+++ b/{{cookiecutter.project_name}}/templates/eisvogel-2.0.0.latex
@@ -234,13 +234,15 @@ $if(indent)$
 $else$
 \makeatletter
 \@ifundefined{KOMAClassName}{
-  \IfFileExists{parskip.sty}{%
+  \IfFileExists{parskip.sty}{
     \usepackage{parskip}
-  }{% else
+  }{
     \setlength{\parindent}{0pt}
-    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
-}{% if KOMA class
-  \KOMAoptions{parskip=half}}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}
+}
+}{
+  \KOMAoptions{parskip=half}
+}
 \makeatother
 $endif$
 $if(verbatim-in-note)$
@@ -479,17 +481,8 @@ $if(csl-refs)$
 \setlength{\cslhangindent}{1.5em}
 \newlength{\csllabelwidth}
 \setlength{\csllabelwidth}{3em}
-\newenvironment{CSLReferences}[2] % #1 hanging-ident, #2 entry spacing
- {% don't indent paragraphs
-  \setlength{\parindent}{0pt}
-  % turn on hanging indent if param 1 is 1
-  \ifodd #1 \everypar{\setlength{\hangindent}{\cslhangindent}}\ignorespaces\fi
-  % set entry spacing
-  \ifnum #2 > 0
-  \setlength{\parskip}{#2\baselineskip}
-  \fi
- }%
- {}
+\newenvironment{CSLReferences}[2] 
+ 
 \usepackage{calc}
 \newcommand{\CSLBlock}[1]{#1\hfill\break}
 \newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{#1}}
@@ -508,7 +501,7 @@ $if(beamer)$
 $else$
 \usepackage{etoolbox}
 \makeatletter
-\providecommand{\subtitle}[1]{% add subtitle to \maketitle
+\providecommand{\subtitle}[1]{
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
