--- a/{{cookiecutter.project_name}}/templates/eisvogel-2.0.0.latex
+++ b/{{cookiecutter.project_name}}/templates/eisvogel-2.0.0.latex
@@ -315,7 +315,7 @@ $if(beamer)$
 $endif$
 $if(listings)$
 \usepackage{listings}
-\newcommand{\passthrough}[1]{#1}
+\newcommand{\passthrough}[1]{\#1}
 \lstset{defaultdialect=[5.3]Lua}
 \lstset{defaultdialect=[x86masm]Assembler}
 $endif$
