--- a/{{cookiecutter.project_name}}/templates/eisvogel-2.0.0.latex
+++ b/{{cookiecutter.project_name}}/templates/eisvogel-2.0.0.latex
@@ -386,7 +386,7 @@ $if(graphics)$
 $endif$
 $if(links-as-notes)$
 % Make links footnotes instead of hotlinks:
-\DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
+\DeclareRobustCommand{\href}[2]{\#2\footnote{\url{#1}}}
 $endif$
 $if(strikeout)$
 \usepackage[normalem]{ulem}
