--- a/{{cookiecutter.project_name}}/templates/template.tex
+++ b/{{cookiecutter.project_name}}/templates/template.tex
@@ -81,8 +81,8 @@ $endfor$
 ]{$if(beamer)$$documentclass$$else$$if(book)$scrbook$else$scrartcl$endif$$endif$}
 $if(beamer)$
 $if(background-image)$
-\usebackgroundtemplate{%
-  \includegraphics[width=\paperwidth]{$background-image$}%
+\usebackgroundtemplate{
+  \includegraphics[width=\paperwidth]{$background-image$}
 }
 $endif$
 \usepackage{pgfpages}
@@ -224,20 +224,20 @@ $endif$
 $endif$
 % Use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-\IfFileExists{microtype.sty}{% use microtype if available
+\IfFileExists{microtype.sty}{
   \usepackage[$for(microtypeoptions)$$microtypeoptions$$sep$,$endfor$]{microtype}
-  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+  \UseMicrotypeSet[protrusion]{basicmath} 
 }{}
 $if(indent)$
 $else$
 \makeatletter
-\@ifundefined{KOMAClassName}{% if non-KOMA class
-  \IfFileExists{parskip.sty}{%
+\@ifundefined{KOMAClassName}{
+  \IfFileExists{parskip.sty}{
     \usepackage{parskip}
-  }{% else
+  }{
     \setlength{\parindent}{0pt}
     \setlength{\parskip}{6pt plus 2pt minus 1pt}}
-}{% if KOMA class
+}{
   \KOMAoptions{parskip=half}}
 \makeatother
 $endif$
@@ -390,7 +390,7 @@ $if(strikeout)$
 \pdfstringdefDisableCommands{\renewcommand{\sout}{}}
 $endif$
 \setlength{\emergencystretch}{3em} % prevent overfull lines
-\providecommand{\tightlist}{%
+\providecommand{\tightlist}{
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 $if(numbersections)$
 \setcounter{secnumdepth}{$if(secnumdepth)$$secnumdepth$$else$5$endif$}
@@ -478,7 +478,7 @@ $if(csl-refs)$
 \newlength{\csllabelwidth}
 \setlength{\csllabelwidth}{3em}
 \newenvironment{CSLReferences}[2] % #1 hanging-ident, #2 entry spacing
- {% don't indent paragraphs
+ {
   \setlength{\parindent}{0pt}
   % turn on hanging indent if param 1 is 1
   \ifodd #1 \everypar{\setlength{\hangindent}{\cslhangindent}}\ignorespaces\fi
@@ -486,7 +486,7 @@ $if(csl-refs)$
   \ifnum #2 > 0
   \setlength{\parskip}{#2\baselineskip}
   \fi
- }%
+ }
  {}
 \usepackage{calc}
 \newcommand{\CSLBlock}[1]{#1\hfill\break}
@@ -506,7 +506,7 @@ $if(beamer)$
 $else$
 \usepackage{etoolbox}
 \makeatletter
-\providecommand{\subtitle}[1]{% add subtitle to \maketitle
+\providecommand{\subtitle}[1]{
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
@@ -870,9 +870,9 @@ scale=1,
 color=black,
 opacity=$if(page-background-opacity)$$page-background-opacity$$else$0.2$endif$,
 angle=0,
-contents={%
+contents={
   \includegraphics[width=\paperwidth,height=\paperheight]{$page-background$}
-  }%
+  }
 }
 $endif$
 $endif$
