--- a/{{cookiecutter.project_name}}/templates/template.tex
+++ b/{{cookiecutter.project_name}}/templates/template.tex
@@ -311,7 +311,9 @@ $if(beamer)$
 $endif$
 $if(listings)$
 \usepackage{listings}
+{% raw %}
 \newcommand{\passthrough}[1]{#1}
+{% endraw %}
 \lstset{defaultdialect=[5.3]Lua}
 \lstset{defaultdialect=[x86masm]Assembler}
 $endif$
