--- a/{{cookiecutter.project_name}}/templates/template.tex
+++ b/{{cookiecutter.project_name}}/templates/template.tex
@@ -384,7 +384,9 @@ $if(graphics)$
 $endif$
 $if(links-as-notes)$
 % Make links footnotes instead of hotlinks:
+{% raw %}
 \DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
+{% endraw %}
 $endif$
 $if(strikeout)$
 \usepackage[normalem]{ulem}
@@ -405,11 +407,15 @@ $if(block-headings)$
 % Make \paragraph and \subparagraph free-standing
 \ifx\paragraph\undefined\else
   \let\oldparagraph\paragraph
+  {% raw %}
   \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+  {% endraw %}
 \fi
 \ifx\subparagraph\undefined\else
   \let\oldsubparagraph\subparagraph
+  {% raw %}
   \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+  {% endraw %}
 \fi
 $endif$
 $endif$
